5.0.9~beta1 (2015-03-11)
UPD: switched back the thumbnail size to 480x360 (fallback 320x180 and 120x90)

5.0.9~beta1 (2015-03-11)
UPD: reduced thumbnail size to 320x180 (fallback 120x90 and 480x360)
UPD: use gzip for all http transfer

5.0.8 (2015-03-05)
UPD: Polish (thx 2 Etharr)
UPD: Russian (thx 2 BytEvil)
FIX: improved playback

5.0.7 (2015-02-27)
ADD: 'Refresh' in 'My Subscriptions' and all my playlists
ADD: rename search history item
UPD: French (thx 2 Trilip)
UPD: Ukrainian (thx 2 posledov)
UPD: Spanish (thx 2 PatOso)
FIX: possible crash on not well formed language ids
FIX: optimized logging
FIX: unicode trouble

5.0.6 (2015-02-17)
ADD: setting for hiding the channel name in the description
ADD: Ukrainian (thx 2 posledov)
UPD: show 'Watch History' (default)
UPD: Russian (thx 2 BytEvil)
UPD: improved support for live streams
UPD: improved stream selection based on container
FIX: 'What to watch' => 'Popular right now'
FIX: don't crash while trying to play rtmpe
FIX: corrected ITAG 18 in 360p instead of 260p


5.0.5 (2015-02-01)
ADD: clear search history items
UPD: replace context menu not everywhere
UPD: dropped dependency of 'requests'-module because of performance issues
FIX: Add playing video to the 'Watch History'
FIX: maybe a fix for a problem (again!) on unix systems while using python 2.7.9 + certificate verification
FIX: removed pagination for "Related Videos" - the fix before produced some nasty side-effects
FIX: Vevo signature

5.0.4 (2015-01-15)
ADD: 'Live' in search
ADD: 'Play with...' for supporting external/alternative player
ADD: live events (needed some tests and feedback)
ADD: support for user names instead of channel ids
UPD: set XBMC/KODI to at least Gotham 13.2
UPD: Setup-Wizard views based on content type (KODION update)
FIX: Playlist should work again
FIX: Pagination in APIv2
FIX: settings for hiding 'Live' menu
DEL: support for Frodo

5.0.3 (2015-01-08)
ADD: 'Disliked Videos'
ADD: 240p, 360p and 480p