@@ -1,4 +1,5 @@
 5.0.9~beta1 (2015-03-11)
+ADD: EndPoint for listing the videos of a playlist: "plugin://plugin.video.youtube/playlist/<PLAYLIST_ID>/"
 UPD: switched back the thumbnail size to 480x360 (fallback 320x180 and 120x90)
 
 5.0.9~beta1 (2015-03-11)
